dataset1235/2025-2/2868285114/users/1746929503/executions/3649835072_1462915504.log
== SUBMISSION (2025-08-28 04:20:08)
-- CODE: 
import math

# faça seu código aqui!
comp = float(input())
area = 5/2 * comp * comp /(2*math.tan(math.pi/5))
print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:17:42)
-- CODE: 
import math

# faça seu código aqui!
lado = float(input())

apotema = lado/(2*math.tan(math.pi/5))
area = (5/2) * lado * apotema

print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 04:12:27)
-- CODE: 
import math

# faça seu código aqui!
comp = int(input())
area = 5/2*comp*(comp/2*math.tan(math.pi/5))
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:17:36)
-- CODE: 
import math

# faça seu código aqui!
lado = float(input())

apotema = lao/(2*math.tan(math.pi/5))
area = (5/2) * lado * apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lao/(2*math.tan(math.pi/5))
              ^^^
NameError: name 'lao' is not defined. Did you mean: 'lado'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lao/(2*math.tan(math.pi/5))
              ^^^
NameError: name 'lao' is not defined. Did you mean: 'lado'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lao/(2*math.tan(math.pi/5))
              ^^^
NameError: name 'lao' is not defined. Did you mean: 'lado'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lao/(2*math.tan(math.pi/5))
              ^^^
NameError: name 'lao' is not defined. Did you mean: 'lado'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lao/(2*math.tan(math.pi/5))
              ^^^
NameError: name 'lao' is not defined. Did you mean: 'lado'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lao/(2*math.tan(math.pi/5))
              ^^^
NameError: name 'lao' is not defined. Did you mean: 'lado'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
